# cfcgs-tracker-backend

./: .dockerignore  .gitignore  Dockerfile  cfcgs-tracker.code-workspace  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy-backend.yml
deploy/swarm/: README.md  app-stack.yml  deploy-app.sh  deploy-traefik.sh  stack.env.example  traefik-stack.yml  update-service.sh
evals/langsmith/: chatbot_dataset.json  chatbot_evaluators.py
migrations/: env.py
migrations/versions/: 041098986b25_adding_attrb_disbursement_and_projects_.py  1f2e3d4c5b6a_add_role_to_users.py  297068f885a6_adding_new_entities.py  2e6ef93c2a01_add_source_row_hash_to_climate_finance_records.py  39f944ab0694_make_project_country_id_nullable.py  3fc63392a77d_adding_adaptation_and_mitigation_fields_.py  5d5a4b0a8d22_fix_sub_sector_unique_constraint.py  6a7b8c9d0e1f_add_is_active_to_users.py  7c8d9e0f1a2b_add_chatbot_views.py  89f298e09e39_refactoring_models.py  8d9e0f1a2b3c_update_chatbot_views_with_total_amount.py  9ed181776bdf_adding_funds_fund_types_and_fun_focuses_.py  9f44f9d113c1_add_rows_duplicated_to_import_jobs.py  a33ce1dd3cc1_adiciona_overlap_amount_na_tabela_.py  b91d1b5fb2b7_add_natural_key_index_to_climate_finance_records.py  c8b66f400d8a_adding_file_type_in_importjob.py  cd73046f0307_add_indexes_and_detailed_commitments_.py  ebb853265f83_adding_index.py
scripts/langsmith/: create_chatbot_dataset.py  run_chatbot_evaluation.py
src/cfcgs_tracker/: app.py  database.py  models.py  schemas.py  settings.py
src/cfcgs_tracker/adapters/: csv_importer.py  orm.py  (+1 more)
src/services/: fund_service.py
src/utils/: parser.py
tests/: conftest.py  test_app.py  test_auth.py  test_chatbot_agent.py  test_db.py  test_imports.py  test_users.py
(+98 files in other folders)
