[project]
name = "cfcgs-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "jordany",email = "jordanyluiz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "alembic (>=1.15.2,<2.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "sqlalchemy[postgresql-psycopg] (>=2.0.40,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "psycopg[binary] (>=3.2.8,<4.0.0)",
    "pwdlib[argon2] (>=0.2.1,<0.3.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "python-levenshtein (>=0.27.1,<0.28.0)",
    "langchain (>=1.0.2,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-google-genai (>=2.1.5,<3.0.0)",
    "langgraph (>=1.0.1,<2.0.0)",
]

[tool.poetry]
packages = [{include = "cfcgs_tracker", from = "src"}]

[tool.taskipy.tasks]
run = 'uvicorn src.cfcgs_tracker.app:app --reload --port 8080'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
pre_test = 'task lint'
test = 'pytest -s -x --cov=src.cfcgs_tracker -vv'
post_test = 'coverage html'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[toll.ruff.lint]
preview=true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.9"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
taskipy = "^1.14.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
